# foo_nowplaying2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindFoobar2000.cmake  FindWtl.cmake
release/: foo_nowplaying2.fb2k-component  package.ps1
src/: CMakeLists.txt  TabLog.cpp  TabLog.h  TabNextUp.cpp  TabNextUp.h  TabNowPlaying.cpp  TabNowPlaying.h  TabRun.cpp  TabRun.h  foo_nowplaying2.rc  formatter.cpp  formatter.h  main.cpp  nowplaying.cpp  nowplaying.h  preferences.cpp  preferences.h  queue.cpp  queue.h  resource.h
